# slurm-uenv-mount

./: .clangd  .gitignore  Makefile  Readme.md  TODO.md  generate-rpm.sh  get-slurm.sh  meson.build  meson_options.txt  mount.cpp  mount.hpp  notes.c  plugin.cpp  slurm-uenv-mount.spec  slurm-uenv-mount.spec.in
.github/: tag-issue.md
.github/workflows/: artifacts.yaml  build-test-image-v2.yml  build-test-image.yml  rpm.yml  run-tests-v2.yml  run-tests.yml  slurm.yaml  version_checker.yml
ci/: Dockerfile  Makefile  create-dummy-sqfs.sh  make-fs.sh  test.sbatch  testuser-entrypoint.sh
ci/tests/: Readme.md  check-invalid-file.sbatch  index.db.txt  invalid-file.sh  invalid-flags.sh  invalid-image.sh  invalid-mount-point.sh  plain.sbatch  relative-path.sbatch  squashfs-run.sh  test-override-flags.sbatch  test.bats  test.sbatch  test_sqlite.bats  uenv-mount-point-alone.sh  util
docker/: Dockerfile  Dockerfile.jpc  Dockerfile.simonpzh  Dockerfile.test  Makefile  Readme.md  build.sh  docker-compose.yml  make-binary-rpm.sh  rebuild.sh  run-tests.sh  run.sh  testuser-entrypoint-jpc.sh  testuser-entrypoint-simonpzh.sh  testuser-entrypoint.sh
rpm/: make-rpm.sh  prepare-rpm.sh  slurm-uenv-mount.spec
src/: config.hpp.in  datastore.cpp  datastore.hpp  mount.cpp  mount.hpp  parse_args.cpp  parse_args.hpp  plugin.cpp
src/database/: database.cpp  database.hpp  sqlite.cpp
src/lib/: database.cpp  database.hpp  mount.cpp  parse_args.cpp  sqlite.cpp
src/sqlite/: sqlite-test.cpp  sqlite.cpp  sqlite.hpp  test.sh
src/util/: helper.cpp  helper.hpp  strings.cpp  strings.hpp
subprojects/: sqlitecpp.wrap
tests/unit/: parse_args.cpp  strings.cpp
